--- a/microtask/package.json
+++ b/microtask/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vee-validate": "^2.2.9",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
